--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,4 +24,4 @@ jobs:
       - run: pip3 install -r requirements-test.txt
       - run: curl -L https://github.com/andymantell/govuk-frontend-diff/releases/download/v0.7-alpha/govuk-frontend-diff-linux --output govuk-frontend-diff
       - run: chmod +x govuk-frontend-diff
-      - run: cd tests/utils && nohup python -m flask run --port 3000 & wait-for-it localhost:3000 & ../../govuk-frontend-diff http://localhost:3000 --govuk-frontend-version=v3.7.0 --ci
+      - run: cd tests/utils && nohup python -m flask run --port 3000 & wait-for-it localhost:3000 & ./govuk-frontend-diff http://localhost:3000 --govuk-frontend-version=v3.7.0 --ci
