--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,9 @@ jobs:
           python-version: "3.x"
       - run: sudo apt-get install wait-for-it
       - run: pip3 install -r requirements-test.txt
-      - run: curl -L https://github.com/surevine/govuk-frontend-diff/releases/download/v0.8.1/govuk-frontend-diff-linux --output govuk-frontend-diff
+      - run: curl -L https://github.com/surevine/govuk-frontend-diff/releases/download/v1.0.0/govuk-frontend-diff-linux --output govuk-frontend-diff
       - run: chmod +x govuk-frontend-diff
-      - run: cd tests/utils && nohup python -m flask run --port 3000 & wait-for-it localhost:3000 & ./govuk-frontend-diff http://localhost:3000 --govuk-frontend-version=v3.7.0 --ci
+      - run: |
+          (cd tests/utils && nohup python -m flask run --port 3000 &)
+          wait-for-it localhost:3000
+          ./govuk-frontend-diff http://localhost:3000 --govuk-frontend-version=v3.7.0 --ci
