Update test script and readme

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,node
 
+govuk-frontend-diff
+nohup.out
+
 ### Node ###
 # Logs
 logs
