--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,3 +1,5 @@
 jinja2==2.11.2
-flake8==3.8.3
+flake8==3.8.4
 flask==1.1.2
+# Generated with piprot 0.9.10
+# Looks like you've been keeping up to date, time for a delicious beverage!
