--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -57,4 +57,4 @@ jobs:
       run: |
         (cd tests/utils && nohup python -m flask run --port 3000 &)
         wait-for-it localhost:3000
-        ./govuk-frontend-diff http://localhost:3000 --govuk-frontend-version=v3.10.2 --ci
+        ./govuk-frontend-diff http://localhost:3000 --govuk-frontend-version=v3.10.2 --exclude=details --ci
