--- a/requirements-test.in
+++ b/requirements-test.in
@@ -1,3 +1,4 @@
 flask==2.1.2
+flake8==4.0.1
 # Generated with piprot 0.9.10
 # Looks like you've been keeping up to date, time for a delicious beverage!
