--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,12 @@
 license_files = LICENSE
 
 [flake8]
-exclude = node_modules, venv
-ignore= H301, H306
-max-complexity = 10
-max-line-length = 120
+exclude=venv
+ignore=E203,H301,H306,W503
+max-complexity=10
+max-line-length=120
+
+[isort]
+profile=black
+multi_line_output=3
+line_length=120
