--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -46,5 +46,5 @@ jobs:
       run: |
         (cd tests/utils && nohup python -m flask run --port 3000 &)
         wait-for-it localhost:3000
-        ./govuk-frontend-diff http://localhost:3000 --govuk-frontend-version=v4.4.0 --ci --skip-hidden
+        ./govuk-frontend-diff http://localhost:3000 --govuk-frontend-version=v4.4.0 --ci
 
