--- a/tests/utils/Dockerfile
+++ b/tests/utils/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3
+FROM python:3.10
 
 WORKDIR /src
 
@@ -7,8 +7,8 @@ RUN apt-get install -y wait-for-it
 RUN curl -L https://github.com/surevine/govuk-frontend-diff/releases/download/v1.1.2/govuk-frontend-diff-linux --output govuk-frontend-diff && \
     chmod +x ./govuk-frontend-diff
 
-ADD requirements-test.txt .
-RUN pip3 install -r requirements-test.txt
+ADD requirements-test-3.10.txt .
+RUN pip3 install -r requirements-test-3.10.txt
 
 ADD tests/utils tests/utils
 ADD setup.cfg .
