--- a/requirements-test-3.8.txt
+++ b/requirements-test-3.8.txt
@@ -4,19 +4,21 @@
 #
 #    pip-compile --output-file=requirements-test-3.8.txt requirements-test.in
 #
-click==8.1.3
+blinker==1.6.2
+    # via flask
+click==8.1.4
     # via flask
 flake8==6.0.0
     # via -r requirements-test.in
-flask==2.2.3
+flask==2.3.2
     # via -r requirements-test.in
-importlib-metadata==6.6.0
+importlib-metadata==6.8.0
     # via flask
 itsdangerous==2.1.2
     # via flask
 jinja2==3.1.2
     # via flask
-markupsafe==2.1.2
+markupsafe==2.1.3
     # via
     #   jinja2
     #   werkzeug
@@ -26,7 +28,7 @@ pycodestyle==2.10.0
     # via flake8
 pyflakes==3.0.1
     # via flake8
-werkzeug==2.2.3
+werkzeug==2.3.6
     # via flask
-zipp==3.15.0
+zipp==3.16.0
     # via importlib-metadata
