--- a/tests/utils/Dockerfile
+++ b/tests/utils/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.11
+FROM python:3.11-slim
 
 WORKDIR /src
 
@@ -7,7 +7,7 @@ RUN apt-get install -y wait-for-it
 RUN curl -L https://github.com/matthew-shaw/govuk-frontend-diff/releases/download/v2.0.0-rc.1/govuk-frontend-diff-linux --output govuk-frontend-diff && \
     chmod +x ./govuk-frontend-diff
 
-ADD requirements-test-3.10.txt .
+ADD requirements-test-3.11.txt .
 RUN pip3 install -r requirements-test-3.11.txt
 
 ADD tests/utils tests/utils
