Getting docker tests to work on an amd64 mac
I was getting the sane error as this person trying to run the tests on
an M2 mac

https://stackoverflow.com/questions/71040681/qemu-x86-64-could-not-open-lib64-ld-linux-x86-64-so-2-no-such-file-or-direc

So I adopted the solution of the first answerer and then had some bugs
due to the the containers not installing curl or python. I opted for
python3 which meant changing the pip command too.

--- a/tests/utils/Dockerfile
+++ b/tests/utils/Dockerfile
@@ -1,9 +1,9 @@
-FROM python:3.10
+FROM --platform=linux/amd64 ubuntu:20.04
 
 WORKDIR /src
 
 RUN apt-get update
-RUN apt-get install -y wait-for-it
+RUN apt-get install -y wait-for-it curl python3-pip
 RUN curl -L https://github.com/surevine/govuk-frontend-diff/releases/download/v1.1.2/govuk-frontend-diff-linux --output govuk-frontend-diff && \
     chmod +x ./govuk-frontend-diff
 
