use python 3.11 for local tests

--- a/tests/utils/Dockerfile
+++ b/tests/utils/Dockerfile
@@ -1,14 +1,14 @@
-FROM --platform=linux/amd64 ubuntu:20.04
+FROM python:3.11
 
 WORKDIR /src
 
 RUN apt-get update
-RUN apt-get install -y wait-for-it curl python3-pip
+RUN apt-get install -y wait-for-it
 RUN curl -L https://github.com/surevine/govuk-frontend-diff/releases/download/v1.1.2/govuk-frontend-diff-linux --output govuk-frontend-diff && \
     chmod +x ./govuk-frontend-diff
 
-ADD requirements-test-3.10.txt .
-RUN pip3 install -r requirements-test-3.10.txt
+ADD requirements-test-3.11.txt .
+RUN pip3 install -r requirements-test-3.11.txt
 
 ADD tests/utils tests/utils
 ADD setup.cfg .
