--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,9 +5,9 @@ name: Python package
 
 on:
   push:
-    branches: [ main ]
+    branches: [ v1 ]
   pull_request:
-    branches: [ main ]
+    branches: [ v1 ]
 
 jobs:
   build:
@@ -16,21 +16,21 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 safety
-        pip install -r requirements-test.txt
+        pip install -r requirements-test-${{ matrix.python-version }}.txt
     - name: Check dependencies for known security vulnerabilities
-      run: safety check -r requirements-test.txt
+      run: safety check -r requirements-test-${{ matrix.python-version }}.txt
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -40,11 +40,11 @@ jobs:
     - name: Prepare to test
       run: |
         sudo apt-get install wait-for-it
-        curl -L https://github.com/surevine/govuk-frontend-diff/releases/download/v1.1.1/govuk-frontend-diff-linux --output govuk-frontend-diff
+        curl -L https://github.com/surevine/govuk-frontend-diff/releases/download/v2.0.0/govuk-frontend-diff-linux --output govuk-frontend-diff
         chmod +x govuk-frontend-diff
     - name: Test with govuk-frontend-diff
       run: |
         (cd tests/utils && nohup python -m flask run --port 3000 &)
         wait-for-it localhost:3000
-        ./govuk-frontend-diff http://localhost:3000 --govuk-frontend-version=v3.15.0 --ci
+        ./govuk-frontend-diff http://localhost:3000 --govuk-frontend-version=v3.15.0 --exclude page-template --ci
 
