--- a/requirements-test.in
+++ b/requirements-test.in
@@ -1,4 +1,2 @@
-flake8==4.0.1
-flask==2.0.2
-# Generated with piprot 0.9.10
-# Looks like you've been keeping up to date, time for a delicious beverage!
+flake8
+flask
