--- a/tests/utils/Dockerfile
+++ b/tests/utils/Dockerfile
@@ -1,14 +1,14 @@
-FROM python:3
+FROM python:3.11
 
 WORKDIR /src
 
 RUN apt-get update
 RUN apt-get install -y wait-for-it
-RUN curl -L https://github.com/surevine/govuk-frontend-diff/releases/download/v1.1.1/govuk-frontend-diff-linux --output govuk-frontend-diff && \
+RUN curl -L https://github.com/surevine/govuk-frontend-diff/releases/download/v1.1.2/govuk-frontend-diff-linux --output govuk-frontend-diff && \
     chmod +x ./govuk-frontend-diff
 
-ADD requirements-test.txt .
-RUN pip3 install -r requirements-test.txt
+ADD requirements-test-3.11.txt .
+RUN pip3 install -r requirements-test-3.11.txt
 
 ADD tests/utils tests/utils
 ADD setup.cfg .
