--- a/tests/utils/Dockerfile
+++ b/tests/utils/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.12
+FROM python:3.13-slim
 
 WORKDIR /src
 
@@ -7,8 +7,8 @@ RUN apt-get install -y wait-for-it
 RUN curl -L https://github.com/matthew-shaw/govuk-frontend-diff/releases/download/v2.0.0/govuk-frontend-diff-linux --output govuk-frontend-diff && \
     chmod +x ./govuk-frontend-diff
 
-ADD requirements-test-3.12.txt .
-RUN pip3 install -r requirements-test-3.12.txt
+ADD requirements-test-3.13.txt .
+RUN pip3 install -r requirements-test-3.13.txt
 
 ADD tests/utils tests/utils
 ADD setup.cfg .
