--- a/requirements-test-3.12.txt
+++ b/requirements-test-3.12.txt
@@ -6,11 +6,11 @@
 #
 blinker==1.9.0
     # via flask
-click==8.2.0
+click==8.2.1
     # via flask
-flake8==7.2.0
+flake8==7.3.0
     # via -r requirements-test.in
-flask==3.1.0
+flask==3.1.1
     # via -r requirements-test.in
 itsdangerous==2.2.0
     # via flask
@@ -18,13 +18,14 @@ jinja2==3.1.6
     # via flask
 markupsafe==3.0.2
     # via
+    #   flask
     #   jinja2
     #   werkzeug
 mccabe==0.7.0
     # via flake8
-pycodestyle==2.13.0
+pycodestyle==2.14.0
     # via flake8
-pyflakes==3.3.2
+pyflakes==3.4.0
     # via flake8
 werkzeug==3.1.3
     # via flask
