--- a/requirements-test-3.9.txt
+++ b/requirements-test-3.9.txt
@@ -8,9 +8,9 @@ blinker==1.9.0
     # via flask
 click==8.1.8
     # via flask
-flake8==7.2.0
+flake8==7.3.0
     # via -r requirements-test.in
-flask==3.1.0
+flask==3.1.1
     # via -r requirements-test.in
 importlib-metadata==8.7.0
     # via flask
@@ -20,15 +20,16 @@ jinja2==3.1.6
     # via flask
 markupsafe==3.0.2
     # via
+    #   flask
     #   jinja2
     #   werkzeug
 mccabe==0.7.0
     # via flake8
-pycodestyle==2.13.0
+pycodestyle==2.14.0
     # via flake8
-pyflakes==3.3.2
+pyflakes==3.4.0
     # via flake8
 werkzeug==3.1.3
     # via flask
-zipp==3.21.0
+zipp==3.23.0
     # via importlib-metadata
