--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,31 +18,42 @@ jobs:
         python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
 
     steps:
+      # Checkout the repo
       - uses: actions/checkout@v4
+
+      # Set up Python via setup-python
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+
+      # Install pipenv and dependencies from Pipfile.lock
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install flake8 pip-audit
-          pip install -r requirements-test.txt
-      - name: Check dependencies for known security vulnerabilities
-        run: pip-audit -r requirements-test.txt
+          python -m pip install --upgrade pip pipenv
+          pipenv install --dev --deploy --ignore-pipfile
+
+      # Security check
+      - name: Check dependencies for known vulnerabilities
+        run: pipenv run pip-audit
+
+      # Linting
       - name: Lint with flake8
         run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
-      - name: Prepare to test
+          pipenv run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          pipenv run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
+
+      # Prepare external test tools
+      - name: Prepare test tools
         run: |
-          sudo apt-get install wait-for-it
-          curl -L https://github.com/matthew-shaw/govuk-frontend-diff/releases/download/v2.0.0/govuk-frontend-diff-linux --output govuk-frontend-diff
-          chmod +x govuk-frontend-diff
-      - name: Test with govuk-frontend-diff
+          sudo apt-get update && sudo apt-get install -y wait-for-it curl
+          curl -L https://github.com/matthew-shaw/govuk-frontend-diff/releases/download/v2.0.0/govuk-frontend-diff-linux \
+            --output govuk-frontend-diff
+          chmod +x ./govuk-frontend-diff
+
+      # Run Flask test server and govuk-frontend-diff
+      - name: Run tests with govuk-frontend-diff
         run: |
-          (cd tests/utils && nohup python -m flask run --port 3000 &)
+          (cd tests/utils && nohup pipenv run python -m flask run --port 3000 &)
           wait-for-it localhost:3000
           ./govuk-frontend-diff http://localhost:3000 --govuk-frontend-version=v5.13.0 --exclude page-template --ci
