--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip pipenv
-          pipenv install --dev --deploy --ignore-pipfile
+          pipenv install --dev --deploy --ignore-pipfile --python $(which python)
 
       # Security check
       - name: Check dependencies for known vulnerabilities
